# hpc-simulator-laboratory-project-repo

./: README.md
simulator-project-2026/: README.md  pyproject.toml
simulator-project-2026/app/: addAssetWindow.py  energyMonitorWindow.py  main8.py  movingObject.py  mqttConfig.py  sensor.py  simulatorSensor.py  temperatureSim.py  testData.py
simulator-proyect-2026/app/: addSensorWindow.py  adminAssetWindow.py  adminSensorWindow.py  main8.py  movingObject.py  mqttConfig.py  simulatorSensor.py  user.py
simulator-sbV23/: README.md  pyproject.toml
simulator-sbV23/app/: asset.py  mqttConfig.py  test.py  testData.py
simulator-sbV23/app2/: simulatorgogui.py
simulator-sbV23/delte/: PyHVAC.py  simulator-hvac.py
simulator-sbV23/simul/: roomTemperature.py
simulator-sbV23/tests/: anotherThread.py  anotherThread2.py  toggle.py
simulator-sbV23/tests/media/: anotherThread2
